# HW_Patterns

Lesson 01/Task 1/: CMakeLists.txt  main.cpp  sql_select_query_builder.cpp  sql_select_query_builder.h
Lesson 01/Task 2/: main.cpp  sql_select_query_builder.cpp  sql_select_query_builder.h
Lesson 01/Task 3/: CMakeLists.txt  advanced_sql_select_query_builder.cpp  advanced_sql_select_query_builder.h  main.cpp  sql_select_query_builder.h
Lesson 02/Task 1/: CMakeLists.txt  main.cpp
Lesson 02/Task 2/: CMakeLists.txt  main.cpp
Lesson 03/Task 1/: main.cpp
Lesson 03/Task 2/: main.cpp
Lesson 03/Task 3/: CMakeLists.txt  main.cpp
Lesson 04/Task 1/: main.cpp
